# jellycli

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json
.github/workflows/: main.yml
src/: main.rs
src/auth/: credentials.rs  middleware.rs  mod.rs  oauth.rs
src/client/: gemini.rs  mod.rs  service.rs
src/models/: gemini.rs  mod.rs  openai.rs  shared.rs
src/routes/: api.rs  health.rs  mod.rs
src/utils/: config.rs  logger.rs  mod.rs  thinking_config.rs  transformers.rs
