[package]
name = "jellycli"
version = "0.1.8"
edition = "2024"
description = "Rust implementation of GeminiCLI to OpenAI API bridge"

[[bin]]
name = "jellycli"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# JSON serialization
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

# Date and time
chrono = { version = "0.4.42", features = ["serde"] }

# Async streams
futures = "0.3"
tokio-stream = "0.1"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0.100"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2"

# Configuration
toml = "0.9.7"

# UUID generation
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# URL encoding
urlencoding = "2.1"

# Base64 encoding
base64 = "0.22"

# URL parsing
url = "2.5.7"

# Async trait
async-trait = "0.1"

# Regular expressions
regex = "1.10"